--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-  --main-color: #fa2094;
+  --main-color: #fd4242;
 }
 
 * {
@@ -19,104 +19,53 @@ li {
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Outfit', sans-serif;
 }
 
 .container {
-  width: 1044px;
+  width: 800px;
   margin: 0 auto;
   padding: 0 20px;
   overflow: hidden;
 }
 
-#logo {
-  background: url(/Images/Logo.png) no-repeat;
-  width: 80px;
+#main {
+  height: 100vh;
 }
 
-.nav {
+#main div {
+  flex-direction: column;
   display: flex;
-  margin: 2rem 0;
+  margin-top: 25%;
 }
 
-.nav img {
-  width: 30px;
-}
-
-.nav-list {
-  display: flex;
-  margin: 16px 0 0 auto;
-}
-
-.nav-item {
-  margin-left: 3rem;
-}
-
-.nav-item a {
-  color: #111;
-}
-
-.nav-item a:hover {
-  text-decoration: none;
-  color: var(--main-color);
-}
-
-.header {
-  display: flex;
-  margin-top: 8rem;
-}
-
-.header h1 {
-  margin: 0.5rem 0;
-  font-family: 'Hachi Maru Pop', cursive;
-  font-size: 60px;
-  color: #111;
-}
-
-.header h1 span {
-  color: var(--main-color);
-}
-
-.header p {
-  margin-bottom: 1rem;
-  width: 500px;
-  font-size: 1.2rem;
-}
-#run {
-  display: inline-block;
-  padding: 0.7rem 1.4rem;
-  border-radius: 10px;
-  border: 2px solid var(--main-color);
-  color: #fff;
-  background: var(--main-color);
-  font-size: 14px;
-  transition: all 0.3s ease-in-out;
-}
-
-#run:hover {
-  background: #fff;
-  color: #111;
-}
-
-.learn-more {
-  display: inline-block;
-  padding: 0.7rem 1.4rem;
-  border-radius: 10px;
-  border: 2px solid var(--main-color);
-  color: #111;
-  font-size: 14px;
-  background: #fff;
-  transition: all 0.3s ease-in-out;
-}
-
-.learn-more:hover {
-  background: #fff;
-  color: #111;
-}
-
-.footer {
-  font-size: 10px;
-  margin-top: 10.5rem;
+h1 {
+  font-size: 70px;
+  font-family: 'Righteous', sans-serif;
   text-align: center;
+  margin: auto;
+}
+
+h1 span {
   color: var(--main-color);
+}
+
+button {
+  background: var(--main-color);
+  color: #fff;
+  border: none;
+  border-radius: 50px;
+  width: 180px;
+  height: 55px;
+  text-align: center;
+  font-size: 20px;
+  font-family: 'Outfit', sans-serif;
+  margin: auto;
+  margin-top: 100px;
+}
+
+@media (max-width: 768px) {
+  #main div {
+    margin-top: 50%;
+  }
 }
